Added search functionality, finished minor edits and tweaks, repaired bugs in the controller with multiple forms

--- a/bookofspells/bookofspells/Views/Spellbook/Index.cshtml
+++ b/bookofspells/bookofspells/Views/Spellbook/Index.cshtml
@@ -28,7 +28,7 @@
                             <a href="spellbook/enchantment?title=@ViewBag.White[i].Title" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
                         </div>
                         <div class="text-uppercase small">
-                            @*<span class="badge badge-pill badge-dark">@ViewBag.White[i].MagicType</span>*@
+                            <span class="badge badge-pill badge-dark">@ViewBag.White[i].MagicType</span>
                             <span class="badge badge-pill badge-dark">@ViewBag.White[i].Intention</span>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                             <a href="spellbook/enchantment?title=@ViewBag.Grey[i].Title" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
                         </div>
                         <div class="text-uppercase small">
-                            @*<span class="badge badge-pill bg-darkgray text-light">@ViewBag.Grey[i].MagicType</span>*@
+                            <span class="badge badge-pill bg-darkgray text-light">@ViewBag.Grey[i].MagicType</span>
                             <span class="badge badge-pill bg-darkgray text-light">@ViewBag.Grey[i].Intention</span>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                             <a href="spellbook/enchantment?title=@ViewBag.Black[i].Title" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
                         </div>
                         <div class="text-uppercase small">
-                            @*<span class="badge badge-pill bg-darkgray text-light">@ViewBag.Black[i].MagicType</span>*@
+                            <span class="badge badge-pill bg-darkgray text-light">@ViewBag.Black[i].MagicType</span>
                             <span class="badge badge-pill bg-darkgray text-light">@ViewBag.Black[i].Intention</span>
                         </div>
                     </div>
