--- a/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
+++ b/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
@@ -33,9 +33,8 @@
                             <a class="nav-link" asp-area="" asp-controller="home" asp-action="contact">Send a Raven</a>
                         </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control ml-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        @*<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>*@
+                    <form asp-controller="home" asp-action="search" method="post" class="form-inline my-2 my-lg-0">
+                        <input name="search" class="form-control ml-sm-2" type="search" placeholder="Search" aria-label="Search">
                     </form>
                 </div>
             </div>
