--- a/bookofspells/bookofspells/Views/Home/Search.cshtml
+++ b/bookofspells/bookofspells/Views/Home/Search.cshtml
@@ -20,7 +20,7 @@
                             <h4 class="card-title">@ViewBag.Result[i].Title</h4>
                             <p class="card-text overflow">@ViewBag.Result[i].Enchantment</p>
                             <div class="text-right mb-3">
-                                <a asp-controller="spellbook" asp-action="enchantment" name="@ViewBag.Result[i].Title" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
+                                <a asp-controller="spellbook" asp-action="enchantment" asp-route-id="@ViewBag.Result[i].SpellID" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
                             </div>
                             <div class="text-uppercase small">
                                 <span class="badge badge-pill bg-darkgray text-light">@ViewBag.Result[i].MagicType</span>
