Modified Domain Models to include Input Validation

--- a/bookofspells/bookofspells/Views/Home/Contact.cshtml
+++ b/bookofspells/bookofspells/Views/Home/Contact.cshtml
@@ -22,24 +22,28 @@
      }
 
     <form id="message" method="post">
-        <div class="form-group">
+        <div class="form-group small">
             <label for="name" class="sr-only">Your name</label>
-            <input type="text" asp-for="Name" class="form-control form-control-lg" id="name" placeholder="Name" required>
+            <input type="text" asp-for="Name" class="form-control form-control-lg" id="name" placeholder="Name">
+            <span class="text-danger small" asp-validation-for="Name"></span>
         </div>
 
-        <div class="form-group">
+        <div class="form-group small">
             <label for="email" class="sr-only">Email</label>
-            <input type="email" asp-for="Email" class="form-control form-control-lg" id="email" placeholder="Email" required>
+            <input type="email" asp-for="Email" class="form-control form-control-lg" id="email" placeholder="Email">
+            <span class="text-danger small" asp-validation-for="Email"></span>
         </div>
 
-        <div class="form-group">
+        <div class="form-group small">
             <label for="phone" class="sr-only">Phone number</label>
-            <input type="tel" asp-for="Phone" class="form-control form-control-lg" id="phone" placeholder="Phone" required>
+            <input type="tel" asp-for="Phone" class="form-control form-control-lg" id="phone" placeholder="Phone">
+            <span class="text-danger small" asp-validation-for="Phone"></span>
         </div>
 
-        <div class="form-group mb-5">
+        <div class="form-group small mb-5">
             <label for="message" class="sr-only">Your message</label>
-            <textarea type="text" asp-for="Message" class="form-control form-control-lg" id="message" rows="13" placeholder="Message" required></textarea>
+            <textarea type="text" asp-for="Message" class="form-control form-control-lg" id="message" rows="13" placeholder="Message"></textarea>
+            <span class="text-danger small" asp-validation-for="Message"></span>
         </div>
 
         <div class="text-right">
