Setup functionality to refactor Newsletter Signup as individual controller method; work out page redirect bug before implementing

--- a/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
+++ b/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
                     <p class="h2 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
                 </div>
                 <div class="col-12">
+                    @*<form method="post" asp-controller="home" asp-action="newsletter" class="input-group justify-content-center">*@
                     <form method="post" class="input-group justify-content-center">
                         <input type="email" asp-for="EmailAddress" class="form-control" placeholder="Email" aria-label="Email address" required>
                         <div class="input-group-append">
