Refactored AppUser to inherit from Identity, Modified DbContext and SeedData to work with Identity AppUser

--- a/bookofspells/bookofspells/Views/Spellbook/Enchantment.cshtml
+++ b/bookofspells/bookofspells/Views/Spellbook/Enchantment.cshtml
@@ -25,7 +25,7 @@
             <span class="badge badge-pill bg-darkgray text-light">@ViewBag.Spell.Intention</span>
         </div>
         <div class="col">
-            <p>Cast by: @ViewBag.Spell.User.Username</p>
+            <p>Cast by: @ViewBag.Spell.User.UserName</p>
         </div>
     </div>
 </section>
