--- a/bookofspells/bookofspells/Views/Spellbook/CastSpell.cshtml
+++ b/bookofspells/bookofspells/Views/Spellbook/CastSpell.cshtml
@@ -102,8 +102,8 @@
                     <div class="input-group-prepend">
                         <div class="input-group-text">&#64;</div>
                     </div>
-                    <input asp-for="User.Username" type="text" class="form-control" id="username" placeholder="Username">
-                    <span class="text-danger small" asp-validation-for="User.Username"></span>
+                    <input asp-for="User.UserName" type="text" class="form-control" id="username" placeholder="Username">
+                    <span class="text-danger small" asp-validation-for="User.UserName"></span>
                 </div>
             </div>
 
