Added Login and Registration View Models and Controllers; still working on bug with returnUrl between NewsletterSignup and LoginVM

--- a/bookofspells/bookofspells/Views/Home/Contact.cshtml
+++ b/bookofspells/bookofspells/Views/Home/Contact.cshtml
@@ -21,6 +21,8 @@
          }
      }
 
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
     <form id="message" method="post">
         <div class="form-group small">
             <label for="name" class="sr-only">Your name</label>
