--- a/bookofspells/bookofspells/Views/Spellbook/CastSpell.cshtml
+++ b/bookofspells/bookofspells/Views/Spellbook/CastSpell.cshtml
@@ -27,7 +27,7 @@
         </div>
 
         <div class="form-group row mb-5">
-            <div class="col-6 col-sm-4 mb-4">
+            <div class="col-6 col-md-4 mb-4">
                 <fieldset class="form-group">
                     <legend>Intention:</legend>
                     <div class="form-check small mb-1">
@@ -64,7 +64,7 @@
                 </fieldset>
             </div>
 
-            <div class="col-6 col-sm-4">
+            <div class="col-6 col-md-4 mb-4">
                 <fieldset class="form-group">
                     <legend>Magic type:</legend>
                     <div class="form-check small mb-1">
@@ -89,42 +89,17 @@
                 </fieldset>
             </div>
 
-            <div class="col-6 col-sm-4 mb-4">
+            <div class="col-6 col-md-4">
                 <div class="form-group small">
                     <label for="imageUpload">Upload image</label>
                     <input asp-for="Filename" type="file" class="form-control-file small" id="imageUpload">
                 </div>
             </div>
 
-            <div class="col-6 align-self-center">
-                <label class="sr-only" for="username">Username</label>
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">&#64;</div>
-                    </div>
-                    <input asp-for="User.UserName" type="text" class="form-control" id="username" placeholder="Username">
-                    <span class="text-danger small" asp-validation-for="User.UserName"></span>
-                </div>
-            </div>
-
-            <div class="col text-right">
+            <div class="col align-self-center text-right">
                 <button class="btn bg-darkgray text-light py-2 px-sm-4" type="submit">Cast new spell</button>
             </div>
         </div>
     </form>
 </section>
 
-
-@* TESTING *@
-@*@if (ViewBag.Spell != null)
-{
-    @if (ViewBag.Spell.Title != null)
-    {
-        <h1>@ViewBag.Spell.Title</h1>
-        <p>@ViewBag.Spell.Enchantment</p>
-        <p>@ViewBag.Spell.Intention</p>
-        <p>@ViewBag.Spell.MagicType</p>
-        <p>@ViewBag.Spell.User.Username</p>
-        <p>@ViewBag.Spell.FileName</p>
-    }
-}*@
