--- a/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
+++ b/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
@@ -42,23 +42,23 @@
                         @if (signInManager.IsSignedIn(User))
                         {
                             // admin user - link to admin page
-                            @if (User.IsInRole("Admin"))
+                            @if (User.IsInRole("Administrator"))  // TODO: change to Admin
                             {
                                 <li class="nav-item">
                                     <a class="nav-link" asp-action="Index" asp-controller="Admin" asp-area="">
-                                        <span class="fas fa-cog"></span>&nbsp;Admin
+                                        <span class="fas fa-cog"></span>&nbsp; Admin
                                     </a>
                                 </li>
                             }
                             // signed-in user - profile and logout pages
                             <li class="nav-item">
                                 <a class="nav-link" asp-action="Index" asp-controller="Account" asp-area="">
-                                    <span class="fas fa-user"></span>&nbsp;Account
+                                    <i class="fas fa-user"></i>&nbsp; Account
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" asp-action="LogOut" asp-controller="Account" asp-area="">
-                                    <span class="fas fa-sign-out"></span>&nbsp;Logout
+                                    <i class="fas fa-sign-out"></i>&nbsp; Logout
                                 </a>
                             </li>
                         }
@@ -67,11 +67,11 @@
                             // anonymous user - Register link and Log In button
                             <li class="nav-item">
                                 <a class="nav-link" asp-action="Register" asp-controller="Account" asp-area="">
-                                    <span class="fas fa-user-plus"></span>&nbsp;Register
+                                    <i class="fas fa-user-plus"></i>&nbsp;Register
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-action="Login" asp-controller="Account" asp-area="">Log In</a>
+                                <a class="nav-link" asp-action="Login" asp-controller="Account" asp-area="">Login</a>
                             </li>
                         }
                     </ul>
@@ -90,11 +90,6 @@
             @RenderBody()
         </div>
     </main>
-
-
-
-    <partial name="_NewsletterSignupPartial" />
-
 
 
     <footer class="border-top text-muted small pt-4 mb-4">
