--- a/bookofspells/bookofspells/Views/Spellbook/Index.cshtml
+++ b/bookofspells/bookofspells/Views/Spellbook/Index.cshtml
@@ -20,7 +20,9 @@
         {
             <div class="col-sm-6 col-md-4 mb-4">
                 <div class="card">
-                    <img class="card-img-top" src="~/img/@ViewBag.White[i].Filename" alt="Spell image" aria-hidden="true">
+                    <a asp-controller="spellbook" asp-action="enchantment" asp-route-id="@ViewBag.White[i].SpellID">
+                        <img class="card-img-top" src="~/img/@ViewBag.White[i].Filename" alt="Spell image" aria-hidden="true">
+                    </a>
                     <div class="card-body">
                         <h4 class="card-title">@ViewBag.White[i].Title</h4>
                         <p class="card-text overflow">@ViewBag.White[i].Enchantment</p>
@@ -47,7 +49,9 @@
         {
             <div class="col-sm-6 col-md-4 mb-4">
                 <div class="card">
-                    <img class="card-img-top" src="~/img/@ViewBag.Grey[i].Filename" alt="Spell image" aria-hidden="true">
+                    <a asp-controller="spellbook" asp-action="enchantment" asp-route-id="@ViewBag.Grey[i].SpellID">
+                        <img class="card-img-top" src="~/img/@ViewBag.Grey[i].Filename" alt="Spell image" aria-hidden="true">
+                    </a>
                     <div class="card-body">
                         <h4 class="card-title">@ViewBag.Grey[i].Title</h4>
                         <p class="card-text overflow">@ViewBag.Grey[i].Enchantment</p>
@@ -74,7 +78,9 @@
         {
             <div class="col-sm-6 col-md-4 mb-4">
                 <div class="card">
-                    <img class="card-img-top" src="~/img/@ViewBag.Black[i].Filename" alt="Spell image" aria-hidden="true">
+                    <a asp-controller="spellbook" asp-action="enchantment" asp-route-id="@ViewBag.Black[i].SpellID">
+                        <img class="card-img-top" src="~/img/@ViewBag.Black[i].Filename" alt="Spell image" aria-hidden="true">
+                    </a>
                     <div class="card-body">
                         <h4 class="card-title">@ViewBag.Black[i].Title</h4>
                         <p class="card-text overflow">@ViewBag.Black[i].Enchantment</p>
