Make user menu smaller

--- a/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
+++ b/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         </li>
                     </ul>
 
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto small">
                         <!-- Login buttons and links -->
                         @using Microsoft.AspNetCore.Identity
                         @inject SignInManager<AppUser> signInManager
